Add a totally silent mode to sccmap, so that no statistics are printed.

--- a/cmd/tools/sccmap.1
+++ b/cmd/tools/sccmap.1
@@ -27,6 +27,9 @@ Preserve degenerate components of only one node.
 Do not print the resulting graphs. Only the statistics are
 important.
 .TP
+.B \-S
+Just print the resulting graphs. No statistics are printed.
+.TP
 .B \-v
 Generate additional statistics. In particular,
 .B sccmap
