#1489 - apply Ryan's documentation patch

--- a/doc/infosrc/html.2
+++ b/doc/infosrc/html.2
@@ -258,9 +258,9 @@ Allowed values are
 <LI>BOTH : expand both image width height to fill  </LI>
 </ul>
 If this attribute is undefined, 
-the image inherits the <A HREF=attrs.html#d:imagescale>imagescale</A> 
+the image inherits the <A HREF="attrs.html#d:imagescale">imagescale</A> 
 attribute of the graph object being drawn.
-As with the <A HREF=attrs.html#d:imagescale>imagescale</A>
+As with the <A HREF="attrs.html#d:imagescale">imagescale</A>
 attribute, if the cell has a fixed size and the image is too large,
 any offending dimension will be shrunk to fit the space, the
 scaling being uniform in width and height if <I>SCALE=<TT>"true"</TT></I>.
@@ -270,8 +270,8 @@ scaling being uniform in width and height if <I>SCALE=<TT>"true"</TT></I>.
 <BLOCKQUOTE>
 specifies the image file to be displayed in the cell.
 Note that if the software is used as a web server, file system access
-to images is more restricted. See <A HREF=d:GV_FILE_PATH>GV_FILE_PATH</A>
-and <A HREF=d:SERVER_NAME>SERVER_NAME</A>.
+to images is more restricted. See <A HREF="#d:GV_FILE_PATH">GV_FILE_PATH</A>
+and <A HREF="#d:SERVER_NAME">SERVER_NAME</A>.
 </BLOCKQUOTE>
 
 <B><I><FONT SIZE=-1>TARGET="value"</FONT></I></B>
