Add -q (quiet) flag; use better name function for edges (agnameof isn't really right).

--- a/cmd/gvpr/gvpr.1
+++ b/cmd/gvpr/gvpr.1
@@ -7,7 +7,7 @@ gvpr \- graph pattern scanning and processing language
 )
 .SH SYNOPSIS
 .B gvpr
-[\fB\-icV?\fP]
+[\fB\-icqV?\fP]
 [
 .BI \-o
 .I outfile
@@ -88,6 +88,9 @@ for the file. If
 is not given,
 .B gvpr
 will use the first non\(hyoption argument as the program.
+.TP
+.B \-q
+Turns off warning messages.
 .TP
 .B \-V
 Causes the program to print version information and exit.
