--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,4 @@
-March 1, 2009
+March 3, 2009
 	- Release 2.22
 	- Core:
 		- libgvc api changed, version bumped.  Affects third party
@@ -7,9 +7,16 @@ March 1, 2009
 		  plugins for graphviz.
 		- 90% conversion to cgraph has been done, but not enabled yet,
 		  (and yes, its true what they say about the last 10% )
+		- drop libagraph from distribution  (use libcgraph)
 		- layout code completely converted to floating point.
 		- new "dot -P" option for generating a graph of available
 		  plugins.
+		- registered MIME type:  text/vnd.graphviz for .gv files
+		- rename files from .dot to .gv to avoid conflict with
+		  Word templates.  .dot still supported, but deprecated.
+		- new command: mm2gv   (matrix-market graph file conversion)
+		- rename commands:	dot2gxl -> gv2gxl
+					gxl2dot -> gxl2gv
 	- Plugins:
 		- new rsvg plugin for support of node shapes in SVG format
 		- new gs plugin for support of node shapes in PS format
@@ -50,13 +57,6 @@ March 1, 2009
 		1568, 1569, 1570, 1571, 1573, 1577, 1578, 1579, 1580, 1581,
 		1582, 1584, 1586,
 		
-August 2, 2008
-	- drop libagraph from distribution - part of migration to libcgraph
-	- rename file format from .dot to .gv to avoid conflict with Word templates
-	- registered MIME type:  text/vnd.graphviz
-	- new command: mm2gv   (matrix-market to gv graph file conversion)
-	- rename commands:	dot2gxl -> gv2gxl
-				gxl2dot -> gxl2gv
 June 25, 2008
 	- Release 2.20.2
 	- Fix bug in HTML-like labels 
