--- a/cmd/dot/osage.1
+++ b/cmd/dot/osage.1
@@ -1,155 +1,48 @@
-.TH DOT 1 "23 August 2004" \*(eX
+.TH OSAGE 1 "27 May 2009" \*(eX
 .SH NAME
-dot \- filter for drawing directed graphs
-.br
-neato \- filter for drawing undirected graphs
-.br
-twopi \- filter for radial layouts of graphs
-.br
-circo \- filter for circular layout of graphs
-.br
-fdp \- filter for drawing undirected graphs
-.br
-sfdp \- filter for drawing large undirected graphs
+osage \- filter for drawing clustered graphs
 .SH SYNOPSIS
-\fBdot\fR
+\fBosage\fR
 [\fB\-\fR(\fBG\fR|\fBN\fR|\fBE\fR)\fIname=value\fR]
 [\fB\-T\fIlang\fR]
 [\fB\-l\fIlibfile\fR]
 [\fB\-o\fIoutfile\fR]
-[\fB\-K\fIlayout\fR]
-[\fB\-O\fR]
-[\fB\-P\fR]
-[\fB\-v\fR]
-[\fB\-V\fR]
-[files]
-.br
-\fBneato\fR
-[\fB\-\fR(\fBG\fR|\fBN\fR|\fBE\fR)\fIname=value\fR]
-[\fB\-T\fIlang\fR]
-[\fB\-l\fIlibfile\fR]
-[\fB\-n\fR[\fB1\fR|\fB2\fR]]
-[\fB\-o\fIoutfile\fR]
-[\fB\-K\fIlayout\fR]
-[\fB\-O\fR]
-[\fB\-P\fR]
-[\fB\-v\fR]
-[\fB\-V\fR]
-[files]
-.br
-\fBtwopi\fR
-[\fB\-\fR(\fBG\fR|\fBN\fR|\fBE\fR)\fIname=value\fR]
-[\fB\-T\fIlang\fR]
-[\fB\-l\fIlibfile\fR]
-[\fB\-o\fIoutfile\fR]
-[\fB\-K\fIlayout\fR]
-[\fB\-O\fR]
-[\fB\-P\fR]
-[\fB\-v\fR]
-[\fB\-V\fR]
-[files]
-.br
-\fBcirco\fR
-[\fB\-\fR(\fBG\fR|\fBN\fR|\fBE\fR)\fIname=value\fR]
-[\fB\-T\fIlang\fR]
-[\fB\-l\fIlibfile\fR]
-[\fB\-o\fIoutfile\fR]
-[\fB\-K\fIlayout\fR]
-[\fB\-O\fR]
-[\fB\-P\fR]
-[\fB\-v\fR]
-[\fB\-V\fR]
-[files]
-.br
-\fBfdp\fR
-[\fB\-\fR(\fBG\fR|\fBN\fR|\fBE\fR)\fIname=value\fR]
-[\fB\-T\fIlang\fR]
-[\fB\-l\fIlibfile\fR]
-[\fB\-o\fIoutfile\fR]
-[\fB\-K\fIlayout\fR]
-[\fB\-O\fR]
-[\fB\-P\fR]
-[\fB\-v\fR]
-[\fB\-V\fR]
-[files]
-.br
-\fBsfdp\fR
-[\fB\-\fR(\fBG\fR|\fBN\fR|\fBE\fR)\fIname=value\fR]
-[\fB\-T\fIlang\fR]
-[\fB\-l\fIlibfile\fR]
-[\fB\-o\fIoutfile\fR]
-[\fB\-K\fIlayout\fR]
 [\fB\-O\fR]
 [\fB\-P\fR]
 [\fB\-v\fR]
 [\fB\-V\fR]
 [files]
 .SH DESCRIPTION
+.I osage
+draws clustered graphs. As input, it takes any graph in the
 .I dot
-draws directed graphs.  It works well on DAGs and other graphs
-that can be drawn as hierarchies.
-It reads attributed graph files and writes drawings.
-By default, the output format
-.I dot
-is the input file with layout coordinates appended.
-.PP
-.I neato
-draws undirected graphs using ``spring'' models (see Kamada and Kawai,
-Information Processing Letters 31:1, April 1989).  Input files must be
-formatted in the
-.I dot
-attributed graph language.
-By default, the output of
-.I neato
-is the input graph with layout coordinates appended.
-.PP
-.I twopi
-draws graphs using a radial layout (see G. Wills,
-Symposium on Graph Drawing GD'97, September, 1997).
-Basically, one node is chosen as the center and put at the origin.
-The remaining nodes are placed on a sequence of concentric circles
-centered about the origin, each a fixed radial distance from the
-previous circle.
-All nodes distance 1 from the center are placed on the first circle;
-all nodes distance 1 from a node on the first circle are placed on
-the second circle; and so forth.
-.PP
-.I circo
-draws graphs using a circular layout (see
-Six and Tollis, GD '99 and ALENEX '99, and
-Kaufmann and Wiese, GD '02.)
-The tool identifies biconnected components and draws the nodes of
-the component on a circle. The block\(hycutpoint tree
-is then laid out using a recursive radial algorithm. Edge
-crossings within a circle are minimized by placing as many edges on
-the circle's perimeter as possible.
-In particular, if the component is outerplanar, the component will
-have a planar layout.
-.PP
-If a node belongs to multiple non\(hytrivial biconnected components,
-the layout puts the node in one of them. By default, this is the first
-non\(hytrivial component found in the search from the root component.
-.PP
-.I fdp
-draws undirected graphs using a ``spring'' model. It relies on a
-force\(hydirected approach in the spirit of Fruchterman and Reingold
-(cf. Software\(hyPractice & Experience 21(11), 1991, pp. 1129\(hy1164).
-.PP
-.I sfdp
-also draws undirected graphs using the ``spring'' model described
-above, but it uses a multi-scale approach to produce layouts
-of large graphs in a reasonably short time.
+format. It draws the graph recursively. At each level, there will
+be a collection of nodes and a collection of cluster subgraphs.
+The internals of each cluster subgraph are laid out, then the 
+cluster subgraphs and nodes at the current level are positioned
+relative to each other, treating each cluster subgraph as a node. 
+.P
+At each level, the nodes and cluster subgraphs are viewed as rectangles
+to be packed together. At present, edges are ignored during packing.
+Packing is done using the standard packing functions. In particular,
+the graph attributes \fBpack\fP and \fBpackmode\fP control the layout.
+Each graph and cluster can specify its own values for these attributes.
+Remember also that a cluster inherits its attribute values from
+its parent graph.
+.P
+After all nodes and clusters, edges are routed based on the value of
+the \fBsplines\fP attribute.
 .SH OUTPUT FORMATS
-Dot uses an extensible plugin mechanism for its output renderers,
-so to see what output formats your installation of dot supports
-you can use ``dot \-Txxx'' (where xxx is an unlikely format)
+Osage uses an extensible plugin mechanism for its output renderers,
+so to see what output formats your installation of osage supports
+you can use ``osage \-Txxx'' (where xxx is an unlikely format)
 and check the warning message.
 Also, The plugin mechanism supports multiple implementations
 of the output formats.
-To see what variants are available, use, for example: ``dot \-Tpng:''
-and to force a particular variant, use, for example: ``dot \-Tpng:gd''
+To see what variants are available, use, for example: ``osage \-Tpng:''
+and to force a particular variant, use, for example: ``osage \-Tpng:gd''
 .P
-Traditionally, dot supports the following:
+Traditionally, osage supports the following:
 \fB\-Tps\fP (PostScript),
 \fB\-Tsvg\fP \fB\-Tsvgz\fP (Structured Vector Graphics),
 \fB\-Tfig\fP (XFIG graphics),
@@ -166,10 +59,8 @@ can be found at http://www.graphviz.org/cvs/doc/info/output.html.)
 Alternative plugins providing support for a given output format
 can be found from the error message resulting from appending a ':' to the format. e.g. \fB-Tpng:\fP
 The first plugin listed is always the default.
-.P
-The \fB\-P\fP switch can be used to produce a graph of all output variants supported by plugins in the local installation of graphviz.
 .SH GRAPH FILE LANGUAGE
-Here is a synopsis of the graph file language, traditionally using the extension \fB.dot\fR, for graphs:
+Here is a synopsis of the graph file language, traditionally using the extension \fB.gv\fR or \fB.dot\fR, for graphs:
 .PP
 [\fBstrict\fR] (\fBgraph\fR|\fBdigraph\fR) \fIname\fP { \fIstatement\(hylist\fP }\fR
 .br 
@@ -223,34 +114,12 @@ The following sections describe attributes that control graph layout.
 a floating point number, or one of the keywords \fBfill\fP,
 \fBcompress\fP, or \fBauto\fP.
 .PP
-\fBlayout=\fIengine\fR indicates the preferred layout engine ("dot", "neato", fdp" etc) overriding the default from the basename of the command or the -K commandline option.
-.PP
-\fBmargin=\fIf\fR sets the page margin (included in the page size).
-.PP
-\fBnodesep=\fIf\fR sets the minimum separation between nodes.
-.PP
-\fBranksep=\fIf\fR sets the minimum separation between ranks.
-.PP
-\fBordering=out\fR constrains order of out\(hyedges in a subgraph
-according to their file sequence.
-.PP
-\fBrankdir=LR|RL|BT\fR requests a left\(hyto\(hyright, right\(hyto\(hyleft, or bottom\(hyto\(hytop, drawing.
-.PP
 \fBpagedir=\fR[TBLR][TBLR] sets the major and minor order of pagination.
-.PP
-\fBrank=same\fR (or \fBmin\fP or \fBmax\fP) in a subgraph
-constrains the rank assignment of its nodes.   If a subgraph's
-name has the prefix \fBcluster\fP, its nodes are drawn in
-a distinct rectangle of the layout.  Clusters may be nested.
 .PP
 \fBrotate=90\fR sets landscape mode. 
 (\fBorientation=land\fR is backward compatible but obsolete.)
 .PP
 \fBcenter=\fIn\fR a non\(hyzero value centers the drawing on the page.
-.PP
-\fBnslimit=\fIf\fR or \fBmclimit=\fIf\fR adjusts the bound on the
-number of network simplex or mincross iterations by the given ratio.
-For example, \fBmclimit=2.0\fP runs twice as long.
 .PP
 \fBlayers="\fIid:id:id:id\fR" is a sequence of layer identifiers for
 overlay diagrams.  The PostScript array variable \fIlayercolorseq\fR
@@ -277,63 +146,7 @@ drawn as orthogonal polylines.
 In all of these cases, the nodes may not overlap.
 If \fBsplines=\fIfalse\fR or \fBsplines=\fIline\fR, edges are 
 drawn as line segments.
-The default is \fItrue\fR for dot, and \fIfalse\fR for all other layouts.
-
-.PP
-\fB(neato\(hyspecific attributes)\fR
-.br
-\fBstart=\fIval\fR.  Requests random initial placement and seeds
-the random number generator.  If \fIval\fP is not an integer,
-the process ID or current time is used as the seed.
-.PP
-\fBepsilon=\fIn\fR.  Sets the cutoff for the solver.
-The default is 0.1.
-
-.PP
-\fB(twopi\(hyspecific attributes)\fR
-.br
-\fBroot=\fIctr\fR. This specifies the node to be used as the center of
-the layout. If not specified, \fItwopi\fP will randomly pick one of the
-nodes that are furthest from a leaf node, where a leaf node is a node
-of degree 1. If no leaf nodes exists, an arbitrary node is picked as center.
-.PP
-\fBranksep=\fIval\fR. Specifies the radial distance in inches between
-the sequence of rings. The default is 0.75.
-.PP
-\fBoverlap=\fImode\fR. This specifies what \fItwopi\fP should do if
-any nodes overlap. If mode is \fI"false"\fP, the program uses Voronoi
-diagrams to adjust the nodes to eliminate overlaps. If mode is \fI"scale"\fP,
-the layout is uniformly scaled up, preserving node sizes, until nodes no
-longer overlap. The latter technique removes overlaps while preserving
-symmetry and structure, while the former removes overlaps more compactly
-but destroys symmetries.
-If mode is \fI"true"\fP (the default), no repositioning is done.
-
-.PP
-\fB(circo\(hyspecific attributes)\fR
-.br
-\fBroot=\fInodename\fR. Specifies the name of a node occurring in the
-root block. If the graph is disconnected, the \fBroot\fP node attribute
-can be used to specify additional root blocks.
-.PP
-\fBmindist=\fIvalue\fR. Sets the minimum separation between all nodes. If not
-specified then \fIcirco\fP uses a default value of 1.0.
-
-.PP
-\fB(fdp\(hyspecific attributes)\fR
-.br
-\fBK=\fIval\fR. Sets the default ideal node separation
-in the layout.
-.PP
-\fBmaxiter=\fIval\fR. Sets the maximum number of iterations used to
-layout the graph.
-.PP
-\fBstart=\fIval\fR. Adjusts the random initial placement of nodes
-with no specified position.  If \fIval\fP is is an integer,
-it is used as the seed for the random number generator.
-If \fIval\fP is not an integer, a random system\(hygenerated integer,
-such as the process ID or current time, is used as the seed.
-.PP
+The default is \fIfalse\fR.
 
 .SH "NODE ATTRIBUTES"
 .PP
@@ -445,26 +258,8 @@ The substrings '\\N' and '\\G' are substituted in the same manner as
 for the node label attribute.
 Additionally the substring '\\L' is substituted with the node label string.
 
-.PP
-\fB(circo\(hyspecific attributes)\fR
-.br
-\fBroot=\fItrue/false\fR. This specifies that the block containing the given
-node be treated as the root of the spanning tree in the layout.
-
-.PP
-\fB(fdp\(hyspecific attributes)\fR
-.br
-\fBpin=\fIval\fR. If \fIval\fR is "true", the node will remain at
-its initial position.
 
 .SH "EDGE ATTRIBUTES"
-\fBminlen=\fIn\fR where \fIn\fP is an integer factor that applies
-to the edge length (ranks for normal edges, or minimum node separation
-for flat edges).
-.PP
-\fBweight=\fIn\fR where \fIn\fP is the integer cost of the edge.
-Values greater than 1 tend to shorten the edge.  Weight 0 flat
-edges are ignored for ordering nodes.
 .PP
 \fBlabel=\fItext\fR where \fItext\fR may include escaped newlines
 \\\|n, \\\|l, or \\\|r for centered, left, or right justified lines.
@@ -581,8 +376,6 @@ Additionally the substring '\\L' is substituted with the edge label string.
 \fBsamehead,sametail\fP aim edges having the same value to the
 same port, using the average landing point.
 .PP
-\fBconstraint=false\fP causes an edge to be ignored for rank assignment.
-.PP
 \fBlayer=\fIid\fR or \fIid:id\fR or "all" sets the edge's active layers.
 The empty string means no layers (invisible).
 
@@ -595,12 +388,6 @@ greater values make the edge tend more toward its optimal length.
 .PP
 \fBlen=\fIf\fR sets the optimal length of an edge.
 The default is 1.0.
-.PP
-\fB(fdp\(hyspecific attributes)\fR
-.br
-\fBweight=\fIf\fR sets the weight of an edge
-to the given floating point value. The default is 1.0;
-greater values make the edge tend more toward its optimal length.
 .SH "COMMAND LINE OPTIONS"
 \fB\-G\fP sets a default graph attribute.
 .br
@@ -614,34 +401,8 @@ Usually these define custom shapes or styles.
 If \fB\-l\fP is given by itself, the standard library is omitted.
 .PP
 \fB\-T\fIlang\fR sets the output language as described above.
-
-.PP
-\fB\-n\fR[\fB1\fR|\fB2\fR] (no\(hyop)
-If set, neato assumes nodes have already been positioned and all
-nodes have a pos attribute giving the positions.
-It then performs an optional adjustment to remove node\(hynode overlap,
-depending on the value of the overlap attribute,
-computes the edge layouts, depending on the value of the \fBsplines\fR attribute,
-and emits the graph in the appropriate format.
-If num is supplied, the following actions occur:
-.nf
-    num = 1
-.fi
-Equivalent to \-n.
-.nf
-    num > 1
-.fi
-Use node positions as specified,
-with no adjustment to remove node\(hynode overlaps,
-and use any edge layouts already specified by the pos attribute.
-neato computes an edge layout for any edge that does not have a pos attribute.
-As usual, edge layout is guided by the \fBsplines\fR attribute.
-.PP
-\fB\-K\fIlayout\fR override the default layout engine implied by the command name.
 .PP
 \fB\-O\fP automatically generate output filenames based on the input filename and the -T format.
-.PP
-\fB\-P\fP generate a graph of the currently available plugins.
 .PP
 \fB\-v\fP (verbose) prints various information useful for debugging.
 .PP
@@ -651,51 +412,27 @@ As usual, edge layout is guided by the \fBsplines\fR attribute.
 .SH "EXAMPLES"
 .nf
 digraph test123 {
+        pack=8
+        subgraph cluster0 {
+          packmode=array
+          x y x0 y0 x1
+          subgraph cluster1 {
+            m n
+          }
+        }
+        b [shape=box];
+        c [label="hello\\\nworld",color=blue,fontsize=24,
+             fontname="Palatino\-Italic",fontcolor=red,style=filled];
+        a \-> z
+        x \-> z
         a \-> b \-> c;
         a \-> {x y};
-        b [shape=box];
-        c [label="hello\\\|nworld",color=blue,fontsize=24,
-             fontname="Palatino\-Italic",fontcolor=red,style=filled];
-        a \-> z [label="hi", weight=100];
-        x \-> z [label="multi\-line\\\|nlabel"];
         edge [style=dashed,color=red];
         b \-> x;
-        {rank=same; b x}
 }
 .fi
-.PP
-.nf
-graph test123 {
-        a \-\- b \-\- c;
-        a \-\- {x y};
-        x \-\- c [w=10.0];
-        x \-\- y [w=5.0,len=3];
-}
-.fi
-.SH "CAVEATS"
-Edge splines can overlap unintentionally.
-.PP
-Flat edge labels are slightly broken.
-Intercluster edge labels are totally broken.
-.PP
-Because unconstrained optimization is employed, node boxes can
-possibly overlap or touch unrelated edges.  All existing
-spring embedders seem to have this limitation.
-.PP
-Apparently reasonable attempts to pin nodes or adjust edge lengths
-and weights can cause instability.
 .SH AUTHORS
-Stephen C. North <north@research.att.com>
-.br
 Emden R. Gansner <erg@research.att.com>
-.br
-John C. Ellson <ellson@research.att.com>
-.PP
-The bitmap driver (PNG, GIF etc) is by Thomas Boutell, <http://www.boutell.com/gd>
-.PP
-The Truetype font renderer is from
-the Freetype Project (David Turner, Robert Wilhelm, and Werner Lemberg)
-(who can be contacted at freetype\-devel@lists.lrz\-muenchen.de).
 .SH "SEE ALSO"
 This man page contains only a small amount of the information related
 to the Graphviz layout programs. The most complete information can be
@@ -703,23 +440,4 @@ found at http://www.graphviz.org/Documentation.php, especially in the
 on\(hyline reference pages. Most of these documents are also available in the
 \fIdoc\fP and \fIdoc/info\fP subtrees in the source and binary distributions.
 .PP
-dotty(1)
-.br
-tcldot(n)
-.br
-xcolors(1)
-.br
-libgraph(3)
-.PP
-E. R. Gansner, S. C. North,  K. P. Vo, "DAG \(hy A Program to Draw Directed Graphs", Software \(hy Practice and Experience 17(1), 1988, pp. 1047\(hy1062.
-.br
-E. R. Gansner, E. Koutsofios, S. C. North,  K. P. Vo, "A Technique for Drawing Directed Graphs," IEEE Trans. on Soft. Eng. 19(3), 1993, pp. 214\(hy230.
-.br
-S. North and E. Koutsofios, "Applications of graph visualization",
-Graphics Interface 94, pp. 234\(hy245.
-.br
-E. Koutsofios and S. C. North, "Drawing Graphs with dot," 
-Available on research.att.com in dist/drawdag/dotguide.ps.Z.
-.br
-S. C. North, "NEATO User's Manual".
-Available on research.att.com in dist/drawdag/neatodoc.ps.Z.
+dot(1)
